--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "frontend mentor ip-addresss-tracker challenge",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "nodemon app.js"
   },
   "repository": {
     "type": "git",
@@ -15,5 +15,11 @@
   "bugs": {
     "url": "https://github.com/jcasare/ip-address-tracker-master/issues"
   },
-  "homepage": "https://github.com/jcasare/ip-address-tracker-master#readme"
+  "homepage": "https://github.com/jcasare/ip-address-tracker-master#readme",
+  "dependencies": {
+    "dotenv": "^16.0.3",
+    "express": "^4.18.2",
+    "nodemon": "^2.0.20",
+    "path": "^0.12.7"
+  }
 }
